Fix dark mode & upgrade bootstrap from 5.2.0 to 5.3.3 (#66)
* Fix dark mode

* Update bootstrap from 5.2.0 to 5.3.3

* Fix dark mode using color modes

--- a/themes/wc-eh-docs/assets/scss/buttons/_buttons.scss
+++ b/themes/wc-eh-docs/assets/scss/buttons/_buttons.scss
@@ -21,13 +21,6 @@
   color: inherit !important;
 }
 
-.link-dark.seudo-btn:hover,
-.link-dark.seudo-btn:focus,
-.link-dark:hover,
-.link-dark:focus {
-  color: rgba(0, 0, 0, .85) !important;
-  background-color: $active-nav !important;
-}
 
 .btn-toggle::before {
   width: 1.5em;
@@ -102,4 +95,12 @@
   100% {
     transform: translateY(0px);
   }
+}
+
+.seudo-btn:hover,
+.seudo-btn:focus,
+.seudo-btn:hover,
+.seudo-btn:focus {
+  color: rgba(0, 0, 0, .85) !important;
+  background-color: $active-nav !important;
 }
