--- a/themes/wc-eh-docs/assets/scss/custom/_custom.css
+++ b/themes/wc-eh-docs/assets/scss/custom/_custom.css
@@ -22,3 +22,8 @@
 .copy-hash {
   font-size: 10pt !important;
 }
+
+.card-title .summary-title-link {
+  color: inherit;
+  text-decoration: none;
+}
